Fix weird clipping issue on chrome browsers

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,4 +18,5 @@ body {
   padding: 0px;
   font-family: "Montserrat", sans-serif;
   background-color: var(--primary-1);
+  overflow-x: hidden;
 }
